DEVX-155 Investigate and try to remove link folder BIN (and OBJ) Remove back Agreements project to MetraNet solution Remove back Agreements project to MetraNet build process Add folder BIN in Agreements to ignore list Reviewed by SMalinovskiy

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ MakeItAllWithClean.log
 /Source/MetraTech/UI/MetraNet/bin
 /Source/MetraTech/VertexATLWrapper/Debug
 /Source/utils/BinaryCheck/MetraTech.Tools.BinaryCheck.Runner/obj
+/Source/MetraTech/Agreements/Bin
 
 /RMP/Extensions/Account/bin/
 
