--- a/RMP/Extensions/Core/config/Approvals/ActivityServices.config
+++ b/RMP/Extensions/Core/config/Approvals/ActivityServices.config
@@ -8,6 +8,40 @@
   <!-- SERVICE CONFIG -->
   <system.serviceModel>
     <bindings>
+		<netTcpBinding>
+			<binding name="NetTcpBinding_IAccountCreation" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" transactionFlow="false" transferMode="Buffered" transactionProtocol="OleTransactions" hostNameComparisonMode="StrongWildcard" listenBacklog="1000" maxBufferPoolSize="524288" maxBufferSize="6553600" maxConnections="1000" maxReceivedMessageSize="999999999">
+				<readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+				<reliableSession ordered="true" inactivityTimeout="00:10:00" enabled="false" />
+				<security mode="TransportWithMessageCredential">
+				<transport clientCredentialType="None" protectionLevel="EncryptAndSign" />
+				<message clientCredentialType="UserName" />
+				</security>
+			</binding>
+			<binding name="NetTcpBinding_IGroupSubscriptionService" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" transactionFlow="false" transferMode="Buffered" transactionProtocol="OleTransactions" hostNameComparisonMode="StrongWildcard" listenBacklog="1000" maxBufferPoolSize="524288" maxBufferSize="6553600" maxConnections="1000" maxReceivedMessageSize="999999999">
+				<readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+				<reliableSession ordered="true" inactivityTimeout="00:10:00" enabled="false" />
+				<security mode="TransportWithMessageCredential">
+				<transport clientCredentialType="None" protectionLevel="EncryptAndSign" />
+				<message clientCredentialType="UserName" />
+				</security>
+			</binding>
+			<binding name="NetTcpBinding_IProductOfferingService" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" transactionFlow="false" transferMode="Buffered" transactionProtocol="OleTransactions" hostNameComparisonMode="StrongWildcard" listenBacklog="1000" maxBufferPoolSize="524288" maxBufferSize="6553600" maxConnections="1000" maxReceivedMessageSize="999999999">
+				<readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+				<reliableSession ordered="true" inactivityTimeout="00:10:00" enabled="false" />
+				<security mode="TransportWithMessageCredential">
+				<transport clientCredentialType="None" protectionLevel="EncryptAndSign" />
+				<message clientCredentialType="UserName" />
+				</security>
+			</binding>
+			<binding name="NetTcpBinding_ISubscriptionService" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" transactionFlow="false" transferMode="Buffered" transactionProtocol="OleTransactions" hostNameComparisonMode="StrongWildcard" listenBacklog="1000" maxBufferPoolSize="524288" maxBufferSize="6553600" maxConnections="1000" maxReceivedMessageSize="999999999">
+				<readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+				<reliableSession ordered="true" inactivityTimeout="00:10:00" enabled="false" />
+				<security mode="TransportWithMessageCredential">
+				<transport clientCredentialType="None" protectionLevel="EncryptAndSign" />
+				<message clientCredentialType="UserName" />
+				</security>
+			</binding>
+		</netTcpBinding>
       <wsHttpBinding>
 		<binding name="WSHttpBinding_IAccountCreation" closeTimeout="00:01:00"
 			openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
@@ -49,12 +83,30 @@
             <message clientCredentialType="UserName" negotiateServiceCredential="true" establishSecurityContext="true" />
           </security>
         </binding>
-      </wsHttpBinding>
+      </wsHttpBinding>	  
     </bindings>
-    <client>
-		<endpoint address="http://localhost:8001/AccountCreation" binding="wsHttpBinding"
-			bindingConfiguration="WSHttpBinding_IAccountCreation" contract="IAccountCreation"
-			name="WSHttpBinding_IAccountCreation">
+    <client>		
+	  <endpoint address="net.tcp://localhost:99/AccountCreation" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IAccountCreation" contract="IAccountCreation" name="NetTcpBinding_IAccountCreation">
+        <identity>
+          <dns value="ActivityServicesCert" />
+        </identity>
+      </endpoint>
+	   <endpoint address="net.tcp://localhost:99/GroupSubscriptionService" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IGroupSubscriptionService" contract="IGroupSubscriptionService" name="NetTcpBinding_IGroupSubscriptionService">
+        <identity>
+          <dns value="ActivityServicesCert" />
+        </identity>
+      </endpoint>
+     <endpoint address="net.tcp://localhost:99/ProductOfferingService" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IProductOfferingService" contract="IProductOfferingService" name="NetTcpBinding_IProductOfferingService">
+        <identity>
+          <dns value="ActivityServicesCert" />
+        </identity>
+      </endpoint>
+	   <endpoint address="net.tcp://localhost:99/SubscriptionService" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_ISubscriptionService" contract="ISubscriptionService" name="NetTcpBinding_ISubscriptionService">
+        <identity>
+          <dns value="ActivityServicesCert" />
+        </identity>
+      </endpoint>
+		<endpoint address="http://localhost:8001/AccountCreation" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IAccountCreation" contract="IAccountCreation" name="WSHttpBinding_IAccountCreation">
 			<identity>
 				<dns value="ActivityServicesCert" />
 			</identity>
