Live data for pricing engine.
Fixing basic report so that it extends to number of rows.
Add links to rabbitMQ EasyNet client for stats.

--- a/web.config
+++ b/web.config
@@ -94,14 +94,7 @@
     <!-- SITEMAP -->
     <siteMap>
       <providers>
-        <add name="AmpWizardProvider"
-          description="SiteMap provider for the AMP Wizard"
-          type="System.Web.XmlSiteMapProvider, 
-                System.Web,
-                Version=2.0.3600.0, 
-                Culture=neutral, 
-                PublicKeyToken=b03f5f7f11d50a3a"
-          siteMapFile="~/MetraOffer/AmpGui/AmpWizard.sitemap"/>
+        <add name="AmpWizardProvider" description="SiteMap provider for the AMP Wizard" type="System.Web.XmlSiteMapProvider,                  System.Web,                 Version=2.0.3600.0,                  Culture=neutral,                  PublicKeyToken=b03f5f7f11d50a3a" siteMapFile="~/MetraOffer/AmpGui/AmpWizard.sitemap" />
       </providers>
     </siteMap>
   </system.web>
