staged with new diff script

--- a/RMP/UI/MetraNet/web.config
+++ b/RMP/UI/MetraNet/web.config
@@ -34,7 +34,7 @@
           Note:  To detect debug mode to turn off some caching use this: HttpContext.Current.IsDebuggingEnabled
           Note:  Only use debug="false" in production.
     -->
-    <compilation debug="true" targetFramework="4.0">
+    <compilation debug="false" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
         <add assembly="System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
@@ -192,6 +192,14 @@
           </security>
         </binding>
         <binding name="NetTcpBinding_IMetraTech.Core.Services.AmpService" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" transactionFlow="false" transferMode="Buffered" transactionProtocol="OleTransactions" hostNameComparisonMode="StrongWildcard" listenBacklog="1000" maxBufferPoolSize="524288" maxBufferSize="65536" maxConnections="1000" maxReceivedMessageSize="65536">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <reliableSession ordered="true" inactivityTimeout="00:10:00" enabled="false" />
+          <security mode="TransportWithMessageCredential">
+            <transport clientCredentialType="None" protectionLevel="EncryptAndSign" />
+            <message clientCredentialType="UserName" />
+          </security>
+        </binding>
+        <binding name="NetTcpBinding_IMetraTech.Core.Services.CreditNoteService" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" transactionFlow="false" transferMode="Buffered" transactionProtocol="OleTransactions" hostNameComparisonMode="StrongWildcard" listenBacklog="1000" maxBufferPoolSize="524288" maxBufferSize="65536" maxConnections="1000" maxReceivedMessageSize="65536">
           <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384" />
           <reliableSession ordered="true" inactivityTimeout="00:10:00" enabled="false" />
           <security mode="TransportWithMessageCredential">
@@ -521,6 +529,11 @@
         </identity>
       </endpoint>
       <endpoint address="net.tcp://localhost:99/AmpService" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IMetraTech.Core.Services.AmpService" contract="IAmpService" name="NetTcpBinding_IMetraTech.Core.Services.AmpService">
+        <identity>
+          <dns value="ActivityServicesCert" />
+        </identity>
+      </endpoint>
+      <endpoint address="net.tcp://localhost:99/CreditNoteService" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IMetraTech.Core.Services.CreditNoteService" contract="ICreditNoteService" name="NetTcpBinding_IMetraTech.Core.Services.CreditNoteService">
         <identity>
           <dns value="ActivityServicesCert" />
         </identity>
