CORE-7980 Can not access MN Web app using the machine name Code reviewer: DStepanov, VVasilenko

--- a/web.config
+++ b/web.config
@@ -114,6 +114,13 @@
       </authorization>
     </system.web>
   </location>
+  <location path="JavaScriptError.aspx">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
   <!-- APPLICATION SETTINGS -->
   <appSettings>
     <add key="FullyQualifiedMachineName" value="localhost" />
