CORE-8178 Certain Pages in MetraView don't Fully Render when Accessed Remotely Code reviewer: ZMartynov

--- a/Sites/MetraView/web.config
+++ b/Sites/MetraView/web.config
@@ -154,6 +154,13 @@
 			</authorization>
 		</system.web>
 	</location>
+  <location path="JavaScriptError.aspx">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
 	<system.webServer>
 		<!-- 
 				GZip static file content.  Overrides the server default which only compresses static files over 2700 bytes
