--- a/web.config
+++ b/web.config
@@ -12,18 +12,26 @@
     </sectionGroup>
   </configSections>
   <elmah>
-    <security allowRemoteAccess="0"/>
+    <security allowRemoteAccess="0" />
     <!--
             Use to log errors into separate XML files that are stored on 
             disk at the path specified in the logPath attribute.  
       -->
-    <errorLog type="Elmah.XmlFileErrorLog, Elmah" logPath="~/App_Data/Logs"/>
+    <errorLog type="Elmah.XmlFileErrorLog, Elmah" logPath="~/App_Data/Logs" />
   </elmah>
   <system.net>
     <connectionManagement>
       <add address="*" maxconnection="100" />
     </connectionManagement>
   </system.net>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5.2" />
+      </system.Web>
+  -->
   <system.web>
     <!--
           Set compilation debug="true" to insert debugging
@@ -34,7 +42,7 @@
           Note:  To detect debug mode to turn off some caching use this: HttpContext.Current.IsDebuggingEnabled
           Note:  Only use debug="false" in production.
     -->
-    <compilation debug="false" targetFramework="4.0">
+    <compilation debug="false" targetFramework="4.5">
       <assemblies>
         <add assembly="System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
         <add assembly="System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
@@ -61,10 +69,10 @@
         <add assembly="System.Web.Mvc" />
         <add assembly="System.Web.WebPages" />
         <add assembly="Microsoft.Web.Infrastructure" />
-        <add assembly="System.Data.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089"/>
+        <add assembly="System.Data.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
       </assemblies>
       <expressionBuilders>
-          <add expressionPrefix="Code" type="MetraTech.UI.Tools.CodeExpressionBuilder"/>
+        <add expressionPrefix="Code" type="MetraTech.UI.Tools.CodeExpressionBuilder" />
       </expressionBuilders>
     </compilation>
     <customErrors mode="RemoteOnly" defaultRedirect="GenericErrorPage.htm">
@@ -95,7 +103,7 @@
     <!-- SITEMAP -->
     <siteMap>
       <providers>
-        <add name="AmpWizardProvider" description="SiteMap provider for the AMP Wizard" type="System.Web.XmlSiteMapProvider,                  System.Web,                 Version=2.0.3600.0,                  Culture=neutral,                  PublicKeyToken=b03f5f7f11d50a3a" siteMapFile="~/MetraOffer/AmpGui/AmpWizard.sitemap"/>
+        <add name="AmpWizardProvider" description="SiteMap provider for the AMP Wizard" type="System.Web.XmlSiteMapProvider,                  System.Web,                 Version=2.0.3600.0,                  Culture=neutral,                  PublicKeyToken=b03f5f7f11d50a3a" siteMapFile="~/MetraOffer/AmpGui/AmpWizard.sitemap" />
       </providers>
     </siteMap>
   </system.web>
@@ -138,7 +146,7 @@
     <behaviors>
       <endpointBehaviors>
         <behavior name="CustomQuotaBehavior">
-          <dataContractSerializer maxItemsInObjectGraph="10000000"/>
+          <dataContractSerializer maxItemsInObjectGraph="10000000" />
         </behavior>
       </endpointBehaviors>
     </behaviors>
@@ -521,14 +529,14 @@
           </security>
         </binding>
         <binding name="NetTcpBinding_IMetraTech.Core.Services.StaticReportsService" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" transactionFlow="false" transferMode="StreamedResponse" transactionProtocol="OleTransactions" hostNameComparisonMode="StrongWildcard" listenBacklog="10" maxBufferPoolSize="524288" maxBufferSize="65536" maxConnections="10" maxReceivedMessageSize="6553600">
-          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384"/>
-          <reliableSession ordered="true" inactivityTimeout="00:10:00" enabled="false"/>
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <reliableSession ordered="true" inactivityTimeout="00:10:00" enabled="false" />
           <security mode="TransportWithMessageCredential">
             <transport clientCredentialType="None" protectionLevel="EncryptAndSign">
               <!--
               <extendedProtectionPolicy policyEnforcement="Never" />-->
             </transport>
-            <message clientCredentialType="UserName"/>
+            <message clientCredentialType="UserName" />
           </security>
         </binding>
       </netTcpBinding>
@@ -759,11 +767,11 @@
           <dns value="ActivityServicesCert" />
         </identity>
       </endpoint>
-	<endpoint address="net.tcp://localhost:99/AccountTemplateService" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IMetraTech.Core.Services.AccountTemplateService" contract="IAccountTemplateService" name="NetTcpBinding_IMetraTech.Core.Services.AccountTemplateService">
-	  <identity>
-		  <dns value="ActivityServicesCert" />
-	  </identity>
-	</endpoint>
+      <endpoint address="net.tcp://localhost:99/AccountTemplateService" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IMetraTech.Core.Services.AccountTemplateService" contract="IAccountTemplateService" name="NetTcpBinding_IMetraTech.Core.Services.AccountTemplateService">
+        <identity>
+          <dns value="ActivityServicesCert" />
+        </identity>
+      </endpoint>
       <endpoint address="net.tcp://localhost:99/QuotingService" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IMetraTech.Core.Services.QuotingService" contract="IQuotingService" name="NetTcpBinding_IMetraTech.Core.Services.QuotingService">
         <identity>
           <dns value="ActivityServicesCert" />
@@ -776,10 +784,9 @@
       </endpoint>
       <endpoint address="net.tcp://localhost:45454/StaticReportsService" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IMetraTech.Core.Services.StaticReportsService" contract="IStaticReportsService" name="NetTcpBinding_IMetraTech.Core.Services.StaticReportsService">
         <identity>
-          <dns value="ActivityServicesCert"/>
+          <dns value="ActivityServicesCert" />
         </identity>
       </endpoint>
-
     </client>
   </system.serviceModel>
   <applicationSettings>
@@ -856,6 +863,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Castle.Core" publicKeyToken="407dd0808d44fbdc" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.4.0.0" newVersion="4.4.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
