--- a/web.config
+++ b/web.config
@@ -504,6 +504,14 @@
             <message clientCredentialType="UserName" />
           </security>
         </binding>
+        <binding name="NetTcpBinding_IMetraTech.Core.Services.AccountConfigurationSetService" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" transactionFlow="false" transferMode="Buffered" transactionProtocol="OleTransactions" hostNameComparisonMode="StrongWildcard" listenBacklog="1000" maxBufferPoolSize="524288" maxBufferSize="6553600" maxConnections="1000" maxReceivedMessageSize="999999999">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <reliableSession ordered="true" inactivityTimeout="00:10:00" enabled="false" />
+          <security mode="TransportWithMessageCredential">
+            <transport clientCredentialType="None" protectionLevel="EncryptAndSign" />
+            <message clientCredentialType="UserName" />
+          </security>
+        </binding>
         <binding name="NetTcpBinding_IMetraTech.Core.Services.AuthService" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" transactionFlow="false" transferMode="Buffered" transactionProtocol="OleTransactions" hostNameComparisonMode="StrongWildcard" listenBacklog="1000" maxBufferPoolSize="524288" maxBufferSize="6553600" maxConnections="1000" maxReceivedMessageSize="999999999">
           <readerQuotas maxDepth="32" maxStringContentLength="2147483647" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384" />
           <reliableSession ordered="true" inactivityTimeout="00:10:00" enabled="false" />
@@ -757,6 +765,11 @@
 	  </identity>
 	</endpoint>
       <endpoint address="net.tcp://localhost:99/QuotingService" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IMetraTech.Core.Services.QuotingService" contract="IQuotingService" name="NetTcpBinding_IMetraTech.Core.Services.QuotingService">
+        <identity>
+          <dns value="ActivityServicesCert" />
+        </identity>
+      </endpoint>
+      <endpoint address="net.tcp://localhost:99/AccountConfigurationSetService" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IMetraTech.Core.Services.AccountConfigurationSetService" contract="IAccountConfigurationSetService" name="NetTcpBinding_IMetraTech.Core.Services.AccountConfigurationSetService">
         <identity>
           <dns value="ActivityServicesCert" />
         </identity>
